feat: 完善根据 GeoHash 筛选射线穿过的圆形

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,9 @@
         "xutility": "cpp",
         "algorithm": "cpp",
         "optional": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "unordered_map": "cpp",
+        "list": "cpp",
+        "xhash": "cpp"
     }
 }
