--- a/GeoHash/GeoHash.vcxproj
+++ b/GeoHash/GeoHash.vcxproj
@@ -132,11 +132,13 @@
     <ClCompile Include="GeoHashGrid.cpp" />
     <ClCompile Include="GeoHashLine.cpp" />
     <ClCompile Include="GeoHashPoint.cpp" />
+    <ClCompile Include="Trie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeoHashGrid.h" />
     <ClInclude Include="GeoHashLine.h" />
     <ClInclude Include="GeoHashPoint.h" />
+    <ClInclude Include="Trie.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
